// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matchRoutes > 1 match 1`] = `
[
  {
    "handler": {
      "modules": [],
      "route": {
        "modules": [],
        "path": "/",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "isFull": true,
    "last": [Circular],
    "location": "/",
    "next": undefined,
    "params": {},
  },
]
`;

exports[`matchRoutes > 1 match with params 1`] = `
[
  {
    "handler": {
      "modules": [],
      "route": {
        "modules": [],
        "path": "/[:id]",
      },
      "test": {
        "keys": [
          "id",
        ],
        "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "isFull": true,
    "last": [Circular],
    "location": "/100",
    "next": undefined,
    "params": {
      "id": "100",
    },
  },
]
`;

exports[`matchRoutes > 2 matches 1`] = `
[
  {
    "handler": {
      "modules": [],
      "route": {
        "modules": [],
        "path": "/",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "modules": [],
          "route": {
            "modules": [],
            "path": "/abc",
          },
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
    "isFull": false,
    "last": {
      "handler": {
        "modules": [],
        "route": {
          "modules": [],
          "path": "/abc",
        },
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
      "isFull": true,
      "last": [Circular],
      "location": "/abc",
      "next": undefined,
      "params": {},
    },
    "location": "/",
    "next": {
      "handler": {
        "modules": [],
        "route": {
          "modules": [],
          "path": "/abc",
        },
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
      "isFull": true,
      "last": [Circular],
      "location": "/abc",
      "next": undefined,
      "params": {},
    },
    "params": {},
  },
  {
    "handler": {
      "modules": [],
      "route": {
        "modules": [],
        "path": "/abc",
      },
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
    "isFull": true,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
  },
]
`;

exports[`matchRoutes > no matches 1`] = `[]`;
